Fix warmup endpoint definition
