# server/api.yaml
@@ -17,16 +17,13 @@ paths:
                 schema:
                   $ref: '#/components/schemas/Greetings'
   /warmup:
-    post:
+    get:
       summary: Charge le système socio-fiscal
-      operationId: server.handlers.WarmUp.load_taxbenefits_system
+      operationId: server.handlers.WarmUp.load_tax_benefits_system
       responses:
           '200':
             description: Renvoie le statut de chargement du système socio-fiscal
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/Greetings'
+
   /calculate/revenus:
     post:
       summary: Calcule l'impact par cas types
